final checking ready
